--- a/The Math/Base.lproj/LaunchScreen.xib
+++ b/The Math/Base.lproj/LaunchScreen.xib
@@ -21,9 +21,22 @@
                     <subviews>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How Am I Doing" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
                             <rect key="frame" x="20" y="140" width="441" height="43"/>
-                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="32"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="kbI-3q-RzO"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="29"/>
                             <color key="textColor" red="0.99990516901016235" green="1" blue="0.99987047910690308" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="kbI-3q-RzO"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="kbI-3q-RzO"/>
+                                </mask>
+                            </variation>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_graphic" translatesAutoresizingMaskIntoConstraints="NO" id="WVX-u4-Na3">
                             <rect key="frame" x="180" y="8" width="120" height="120"/>
@@ -32,13 +45,12 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="WVX-u4-Na3" firstAttribute="leading" secondItem="ZB4-gY-CbC" secondAttribute="leading" constant="83" id="1qj-WX-6rz"/>
+                        <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="ZB4-gY-CbC" secondAttribute="leading" constant="-77" id="2bg-1L-wKI"/>
                         <constraint firstAttribute="trailing" secondItem="WVX-u4-Na3" secondAttribute="trailing" constant="83" id="6hh-zx-VpW"/>
-                        <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="WVX-u4-Na3" secondAttribute="bottom" constant="35" id="M4S-eD-wtR"/>
+                        <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="WVX-u4-Na3" secondAttribute="bottom" constant="20" id="8OQ-ry-tqq"/>
                         <constraint firstItem="WVX-u4-Na3" firstAttribute="top" secondItem="ZB4-gY-CbC" secondAttribute="top" id="WBy-LY-diZ"/>
-                        <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="WVX-u4-Na3" secondAttribute="bottom" constant="35" id="aSQ-gl-u6F"/>
-                        <constraint firstAttribute="bottom" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="8" id="bfJ-zo-bqk"/>
-                        <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="ZB4-gY-CbC" secondAttribute="leading" constant="-77" id="qfl-BQ-bh6"/>
-                        <constraint firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" constant="-78" id="uRa-4M-d3X"/>
+                        <constraint firstAttribute="bottom" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="23" id="XyX-Wn-otF"/>
+                        <constraint firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" constant="-78" id="bKj-BF-myA"/>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
@@ -46,14 +58,13 @@
                             <exclude reference="WVX-u4-Na3"/>
                         </mask>
                         <mask key="constraints">
-                            <exclude reference="M4S-eD-wtR"/>
-                            <exclude reference="aSQ-gl-u6F"/>
-                            <exclude reference="bfJ-zo-bqk"/>
-                            <exclude reference="qfl-BQ-bh6"/>
-                            <exclude reference="uRa-4M-d3X"/>
                             <exclude reference="1qj-WX-6rz"/>
                             <exclude reference="6hh-zx-VpW"/>
                             <exclude reference="WBy-LY-diZ"/>
+                            <exclude reference="2bg-1L-wKI"/>
+                            <exclude reference="8OQ-ry-tqq"/>
+                            <exclude reference="XyX-Wn-otF"/>
+                            <exclude reference="bKj-BF-myA"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -62,19 +73,18 @@
                             <include reference="WVX-u4-Na3"/>
                         </mask>
                         <mask key="constraints">
-                            <include reference="M4S-eD-wtR"/>
-                            <include reference="aSQ-gl-u6F"/>
-                            <include reference="bfJ-zo-bqk"/>
-                            <include reference="qfl-BQ-bh6"/>
-                            <include reference="uRa-4M-d3X"/>
                             <include reference="1qj-WX-6rz"/>
                             <include reference="6hh-zx-VpW"/>
                             <include reference="WBy-LY-diZ"/>
+                            <include reference="2bg-1L-wKI"/>
+                            <include reference="8OQ-ry-tqq"/>
+                            <include reference="XyX-Wn-otF"/>
+                            <include reference="bKj-BF-myA"/>
                         </mask>
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.13565674424171448" green="0.52175182104110718" blue="0.97722655534744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.18823529410000001" green="0.43921568630000002" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
