--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1077,7 +1077,120 @@ that day etc</string>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dWB-1p-IoJ">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJS-AY-5oD">
+                                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="255" id="Q7d-2b-dvy"/>
+                                                        </constraints>
+                                                        <string key="text">Where do you want to make progress in your life? 
+
+Be as specific or as general as you like: from Love Life to Fitness, to Diet to how your Sudoku game is...</string>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="Q7d-2b-dvy"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="heightClass=regular-widthClass=compact">
+                                                            <mask key="constraints">
+                                                                <include reference="Q7d-2b-dvy"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </label>
+                                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="onboarding_05" translatesAutoresizingMaskIntoConstraints="NO" id="kxP-wN-4Of">
+                                                        <rect key="frame" x="0.0" y="-156" width="187" height="156"/>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose the categories you’d like to track." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Mr-sB-NSk">
+                                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="23"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQK-h6-qv0">
+                                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="SSw-Xj-WDT"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                                        <state key="normal" title="Choose Categories">
+                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="SSw-Xj-WDT"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="heightClass=regular-widthClass=compact">
+                                                            <mask key="constraints">
+                                                                <include reference="SSw-Xj-WDT"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </button>
+                                                </subviews>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="0Mr-sB-NSk" secondAttribute="trailing" constant="8" id="2bh-AM-bJ9">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="22"/>
+                                                    </constraint>
+                                                    <constraint firstAttribute="trailing" secondItem="PQK-h6-qv0" secondAttribute="trailing" constant="8" id="5IH-nQ-hrf"/>
+                                                    <constraint firstAttribute="bottom" secondItem="PQK-h6-qv0" secondAttribute="bottom" constant="8" id="DmK-61-Ubm">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="18"/>
+                                                    </constraint>
+                                                    <constraint firstItem="PQK-h6-qv0" firstAttribute="leading" secondItem="dWB-1p-IoJ" secondAttribute="leading" constant="8" id="Fcf-4w-6H9"/>
+                                                    <constraint firstItem="kxP-wN-4Of" firstAttribute="top" secondItem="dWB-1p-IoJ" secondAttribute="top" constant="50" id="G52-pL-vHV"/>
+                                                    <constraint firstAttribute="centerX" secondItem="kxP-wN-4Of" secondAttribute="centerX" id="ROd-EO-RYy"/>
+                                                    <constraint firstAttribute="centerX" secondItem="eJS-AY-5oD" secondAttribute="centerX" id="hhO-E6-y7H"/>
+                                                    <constraint firstItem="PQK-h6-qv0" firstAttribute="top" secondItem="eJS-AY-5oD" secondAttribute="bottom" constant="32" id="iVM-Rp-AKl">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="24"/>
+                                                    </constraint>
+                                                    <constraint firstItem="eJS-AY-5oD" firstAttribute="top" secondItem="0Mr-sB-NSk" secondAttribute="bottom" constant="8" id="kKS-YB-HGJ"/>
+                                                    <constraint firstItem="0Mr-sB-NSk" firstAttribute="leading" secondItem="dWB-1p-IoJ" secondAttribute="leading" constant="14" id="pUz-t7-9qd">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="22"/>
+                                                    </constraint>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="subviews">
+                                                        <exclude reference="eJS-AY-5oD"/>
+                                                        <exclude reference="kxP-wN-4Of"/>
+                                                        <exclude reference="0Mr-sB-NSk"/>
+                                                        <exclude reference="PQK-h6-qv0"/>
+                                                    </mask>
+                                                    <mask key="constraints">
+                                                        <exclude reference="G52-pL-vHV"/>
+                                                        <exclude reference="ROd-EO-RYy"/>
+                                                        <exclude reference="2bh-AM-bJ9"/>
+                                                        <exclude reference="pUz-t7-9qd"/>
+                                                        <exclude reference="hhO-E6-y7H"/>
+                                                        <exclude reference="kKS-YB-HGJ"/>
+                                                        <exclude reference="5IH-nQ-hrf"/>
+                                                        <exclude reference="DmK-61-Ubm"/>
+                                                        <exclude reference="Fcf-4w-6H9"/>
+                                                        <exclude reference="iVM-Rp-AKl"/>
+                                                    </mask>
+                                                </variation>
+                                                <variation key="heightClass=regular-widthClass=compact">
+                                                    <mask key="subviews">
+                                                        <include reference="eJS-AY-5oD"/>
+                                                        <include reference="kxP-wN-4Of"/>
+                                                        <include reference="0Mr-sB-NSk"/>
+                                                        <include reference="PQK-h6-qv0"/>
+                                                    </mask>
+                                                    <mask key="constraints">
+                                                        <include reference="G52-pL-vHV"/>
+                                                        <include reference="ROd-EO-RYy"/>
+                                                        <include reference="2bh-AM-bJ9"/>
+                                                        <include reference="pUz-t7-9qd"/>
+                                                        <include reference="hhO-E6-y7H"/>
+                                                        <include reference="kKS-YB-HGJ"/>
+                                                        <include reference="5IH-nQ-hrf"/>
+                                                        <include reference="DmK-61-Ubm"/>
+                                                        <include reference="Fcf-4w-6H9"/>
+                                                        <include reference="iVM-Rp-AKl"/>
+                                                    </mask>
+                                                </variation>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJL-Qk-mum">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -1181,7 +1294,7 @@ that day etc</string>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="-3200" width="400" height="5600"/>
+                                            <rect key="frame" x="0.0" y="-4000" width="400" height="5600"/>
                                             <mask key="subviews">
                                                 <include reference="IJM-To-V3s"/>
                                                 <include reference="iBh-85-CnX"/>
@@ -1304,7 +1417,7 @@ that day etc</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c40-5x-Qrs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367.5" y="-301.125"/>
+            <point key="canvasLocation" x="367.5" y="-301.5"/>
         </scene>
         <!--Journal View Controller-->
         <scene sceneID="XJj-7P-gUn">
@@ -2961,6 +3074,7 @@ that day etc</string>
         <image name="onboarding_02" width="192" height="322"/>
         <image name="onboarding_03" width="192" height="322"/>
         <image name="onboarding_04" width="320" height="256"/>
+        <image name="onboarding_05" width="187" height="156"/>
         <image name="onboarding_arrow" width="16" height="20"/>
     </resources>
 </document>
