--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1293,8 +1293,7 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="ulr-WU-3yR"/>
                                             </mask>
                                         </variation>
-                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="-4000" width="400" height="5600"/>
+                                        <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="subviews">
                                                 <include reference="IJM-To-V3s"/>
                                                 <include reference="iBh-85-CnX"/>
